# BiobaseNewick

./: .travis.yml  BiobaseNewick.cabal  README.md  cabal.project  changelog.md  devel-stack.yaml  stack.yaml
Biobase/: Newick.hs
Biobase/Newick/: Export.hs  Import.hs  StaticForest.hs  Types.hs
src/: TestForestStructure.hs  diagram.hs
tests/: properties.hs
