Name:           BiobaseNewick
Version:        0.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         Christian Hoener zu Siederdissen
Maintainer:     choener@bioinf.uni-leipzig.de
Copyright:      Christian Hoener zu Siederdissen, 2015
Homepage:       http://www.bioinf.uni-leipzig.de/~choener/
Stability:      Experimental
Category:       Data
Build-type:     Simple
Cabal-version:  >= 1.10
Synopsis:
                Newick file format parser.
Description:
                This is a simple parser for Newick trees.

extra-source-files:
  changelog.md
  README.md

library
  exposed-modules:
    Biobase.Newick
    Biobase.Newick.Import
    Biobase.Newick.Types

  -- 4.7.0.0 is ghc 7.8.1; 4.8.0.0 is ghc 7.10.1
  build-depends: base                     >= 4.7      && < 4.9
               , aeson                    == 0.8.*
               , attoparsec               >= 0.12     && < 0.13
               , binary                   == 0.7.*
               , bytestring
               , cereal                   == 0.4.*
               , containers               == 0.5.*
               , deepseq                  >= 1.3      && < 1.5
               , hashable                 == 1.2.*
               , primitive                >= 0.5      && < 0.7
               , QuickCheck               >= 2.7      && < 2.9
               , storable-tuple           == 0.0.2
               , text                     >= 1.2      && < 1.3
               , unordered-containers     == 0.2.5.*
               , vector                   == 0.10.*
               , vector-binary-instances  == 0.2.*
               , vector-th-unbox          == 0.2.*
  ghc-options:
    -O2
    -funbox-strict-fields
  default-language:
    Haskell2010
  default-extensions: BangPatterns
--                    , DeriveGeneric
--                    , FlexibleContexts
--                    , TypeFamilies
--                    , UndecidableInstances
                    , OverloadedStrings

source-repository head
  type: git
  location: git://github.com/choener/BiobaseNewick

