Name:           BiobaseNewick
Version:        0.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         Christian Hoener zu Siederdissen
Maintainer:     choener@bioinf.uni-leipzig.de
Copyright:      Christian Hoener zu Siederdissen, 2015
Homepage:       https://github.com/choener/BiobaseNewick
bug-reports:    https://github.com/choener/BiobaseNewick/issues
Stability:      Experimental
Category:       Bioinformatics
Build-type:     Simple
Cabal-version:  >= 1.10
Synopsis:       Newick file format parser.
Description:
                This is a simple parser for Newick trees. The parser returns a
                rose tree. Each node is labelled with the node name (or an
                empty string for anonymous nodes) and a distance (0 if not
                given).
                .
                <https://github.com/choener/BiobaseNewick/blob/master/README.md>

extra-source-files:
  changelog.md
  README.md



library
  exposed-modules:
    Biobase.Newick
    Biobase.Newick.Export
    Biobase.Newick.Import
    Biobase.Newick.Types

  -- 4.7.0.0 is ghc 7.8.1; 4.8.0.0 is ghc 7.10.1
  build-depends: base                     >= 4.7      && < 4.9
               , aeson                    >= 0.8      && < 0.11
               , attoparsec               >= 0.12     && < 0.14
               , binary                   >= 0.7      && < 0.8
               , cereal                   >= 0.4      && < 0.5
               , cereal-text              >= 0.1.0    && < 0.1.1
               , containers               >= 0.5      && < 0.6
               , QuickCheck               >= 2.7      && < 2.9
               , text                     >= 1.2      && < 1.3
               , text-binary              >= 0.1.0    && < 0.2.2
  ghc-options:
    -O2
    -funbox-strict-fields
  default-language:
    Haskell2010
  default-extensions: DeriveGeneric
                    , OverloadedStrings



-- A small helper that turns a Newick tree in a diagram.

--executable Newick-diagrams
--  build-depends: base
--               , BiobaseNewick
--               , cmdargs              >= 0.10   && < 0.11
--               , diagrams             >= 1.3    && < 1.4
--               , diagrams-postscript  >= 1.3    && < 1.4
--               , diagrams-rasterific  >= 1.3    && < 1.4
--  hs-source-dirs:
--    src
--  main-is:
--    diagram.hs
--  default-language:
--    Haskell2010
--  default-extensions: BangPatterns
--                    , FlexibleContexts
--                    , FlexibleInstances
--                    , MultiParamTypeClasses
--                    , RecordWildCards
--                    , TemplateHaskell
--                    , TypeFamilies
--                    , TypeOperators
--  ghc-options:
--    -O2



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: ScopedTypeVariables
                    , TemplateHaskell
  build-depends: base
               , aeson
               , binary
               , BiobaseNewick
               , cereal
               , QuickCheck
               , test-framework               >= 0.8  && < 0.9
               , test-framework-quickcheck2   >= 0.3  && < 0.4
               , test-framework-th            >= 0.2  && < 0.3



source-repository head
  type: git
  location: git://github.com/choener/BiobaseNewick

